Fixed tray not showing for carousel

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -1225,7 +1225,7 @@ html.ready #home [role="main"] > div {
 ----------------------------------------------*/
 
 #carousel {
-  margin-bottom: 70px;
+  margin-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -1249,7 +1249,7 @@ html.ready #home [role="main"] > div {
 }
 
 html.js #carousel {
-  height: 460px;
+  height: 480px;
 }
 
 #carousel .panel {
@@ -1283,7 +1283,7 @@ html.js #carousel .panel.old {
 html.js #carousel .tray {
   position: absolute;
   display: block;
-  bottom: -20px;
+  bottom: 0px;
   width: 100%;
   text-align: center;
 }
